--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -13,14 +13,31 @@
   justify-content: space-around;
 }
 
+.home__main {
+  margin: 0 36px;
+}
+
 .home__body {
   display: flex;
   justify-content: center;
   margin: 1vh;
-  border: 3px solid black;
-  border-radius: 12px;
+}
+
+.home__body__left {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.home__body__right {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .poster {
-  width: 40%;
+  width: 40vw;
 }
